erDiagram
  CARCATEGORY ||--o{ CAR : categorizes
  ZIPCODE ||--o{ CUSTOMER : has
  CUSTOMER ||--o{ RENTAL : makes
  CAR ||--o{ RENTAL : on

  CARCATEGORY {
    INT category_id PK
    VARCHAR name
    TEXT description
  }
  ZIPCODE {
    VARCHAR zip PK
    VARCHAR city
  }
  CAR {
    INT car_id PK
    INT category_id FK
    VARCHAR brand
    VARCHAR model
    VARCHAR fuel_type
    VARCHAR registration_no
    INT first_reg_year
    TINYINT first_reg_month
    INT odometer_km
    INT engine_cc
    INT horsepower
    VARCHAR transmission
    TINYINT seats
    BOOLEAN air_condition
    BOOLEAN cruise_control
    BOOLEAN leather_seats
  }
  CUSTOMER {
    INT customer_id PK
    VARCHAR name
    VARCHAR address
    VARCHAR zip FK
    VARCHAR mobile_phone
    VARCHAR phone
    VARCHAR email
    VARCHAR driver_licence_no
    DATE driver_since
  }
  RENTAL {
    INT rental_id PK
    INT customer_id FK
    INT car_id FK
    DATETIME from_datetime
    DATETIME to_datetime
    INT max_km
    INT start_odometer_km
    INT return_odometer_km
    VARCHAR registration_no_snapshot
    VARCHAR driver_license_snapshot
    VARCHAR renter_name_snapshot
    VARCHAR renter_address_snapshot
    VARCHAR renter_zip_snapshot
    VARCHAR renter_city_snapshot
  }
